--- a/tests/phpunit/data/languages/de_DE.po
+++ b/tests/phpunit/data/languages/de_DE.po
@@ -1,14 +1,14 @@
-# Translation of 4.6.x in German
-# This file is distributed under the same license as the 4.6.x package.
+# Translation of 4.9.x in German
+# This file is distributed under the same license as the 4.9.x package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2016-10-25 18:27+0200\n"
+"PO-Revision-Date: 2018-08-01 17:08-0400\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Poedit 1.8.10\n"
-"Project-Id-Version: 4.6.x\n"
+"X-Generator: Poedit 2.1\n"
+"Project-Id-Version: Development (4.9.x)\n"
 "Language: de_DE\n"
 
 #. translators: Translate this to the correct language tag for your locale, see
@@ -40,3 +40,8 @@ msgstr "."
 #: wp-includes/script-loader.php:620
 msgid "Update %s now"
 msgstr "Jetzt %s aktualisieren"
+
+#. translators: Privacy data request subject. 1: Site name, 2: Name of the action
+#: wp-includes/user.php:3445
+msgid "[%1$s] Confirm Action: %2$s"
+msgstr "[%1$s] Aktion bestätigen: %2$s"
